--- a/compose/src/main/res/layout/compose_view_sample_layout.xml
+++ b/compose/src/main/res/layout/compose_view_sample_layout.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/compose_view_text"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_margin="15dp"
         android:layout_gravity="center"/>
 
