--- a/restaurants_demo/src/main/res/layout/location_business_list.xml
+++ b/restaurants_demo/src/main/res/layout/location_business_list.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="46dp"
         android:text="@string/search_hint"
+        android:inputType="text"
         app:layout_constraintEnd_toStartOf="@+id/search_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
